examples/test/testpolicy4201.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4201
  namespace: namespace283
spec:
  podSelector:
    matchLabels:
      key14: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value35
          key30: value21
      podSelector:
        matchLabels:
          key22: value4
          key18: value44
          key46: value41
